tests/neg-custom-args/nowarn/nowarn.check
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:9:10 -----------------------------------------------
9 |def t1a = try 1 // warning (parser)
  |          ^^^^^
  |          A try without catch or finally is equivalent to putting
  |          its body in a block; no exceptions are handled.

longer explanation available when compiling with `-explain`
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:21:26 ----------------------------------------------
21 |@nowarn("id=1") def t4d = try 1 // error and warning (unused nowarn, wrong id)
   |                          ^^^^^
   |                          A try without catch or finally is equivalent to putting
   |                          its body in a block; no exceptions are handled.

longer explanation available when compiling with `-explain`
-- [E000] Syntax Warning: tests/neg-custom-args/nowarn/nowarn.scala:23:28 ----------------------------------------------
23 |@nowarn("verbose") def t5 = try 1 // warning with details
   |                            ^^^^^
   |                            A try without catch or finally is equivalent to putting
   |                            its body in a block; no exceptions are handled.
Matching filters for @nowarn or -Wconf:
  - id=E0
  - name=EmptyCatchOrFinallyBlock

longer explanation available when compiling with `-explain`
-- [E129] Potential Issue Warning: tests/neg-custom-args/nowarn/nowarn.scala:13:11 -------------------------------------
13 |def t2 = { 1; 2 } // warning (the invalid nowarn doesn't silence anything)
   |           ^
   |           A pure expression does nothing in statement position; you may be omitting necessary parentheses

longer explanation available when compiling with `-explain`
-- Warning: tests/neg-custom-args/nowarn/nowarn.scala:12:8 -------------------------------------------------------------
12 |@nowarn("wat?") // warning (typer, invalid filter)
   |        ^^^^^^
   |        Invalid message filter
   |        unknown filter: wat?
-- Deprecation Warning: tests/neg-custom-args/nowarn/nowarn.scala:27:10 ------------------------------------------------
27 |def t6a = f // warning (refchecks, deprecation)
   |          ^
   |          method f is deprecated
-- Deprecation Warning: tests/neg-custom-args/nowarn/nowarn.scala:30:30 ------------------------------------------------
30 |@nowarn("msg=fish") def t6d = f // error (unused nowarn), warning (deprecation)
   |                              ^
   |                              method f is deprecated
-- Deprecation Warning: tests/neg-custom-args/nowarn/nowarn.scala:37:10 ------------------------------------------------
37 |def t7c = f:          // warning (deprecation)
   |          ^
   |          method f is deprecated
-- Unchecked Warning: tests/neg-custom-args/nowarn/nowarn.scala:43:7 ---------------------------------------------------
43 |  case _: List[Int] => 0 // warning (patmat, unchecked)
   |       ^
   |       the type test for List[Int] cannot be checked at runtime
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:21:1 ---------------------------------------------------------------
21 |@nowarn("id=1") def t4d = try 1 // error and warning (unused nowarn, wrong id)
   |^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:30:1 ---------------------------------------------------------------
30 |@nowarn("msg=fish") def t6d = f // error (unused nowarn), warning (deprecation)
   |^^^^^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:38:3 ---------------------------------------------------------------
38 |  @nowarn("msg=fish") // error (unused nowarn)
   |  ^^^^^^^^^^^^^^^^^^^
   |  @nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:50:0 ---------------------------------------------------------------
50 |@nowarn def t9a = { 1: @nowarn; 2 } // error (outer @nowarn is unused)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:51:27 --------------------------------------------------------------
51 |@nowarn def t9b = { 1: Int @nowarn; 2 } // error (inner @nowarn is unused, it covers the type, not the expression)
   |                           ^^^^^^^
   |                           @nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:56:0 ---------------------------------------------------------------
56 |@nowarn @ann(f) def t10b = 0  // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:57:8 ---------------------------------------------------------------
57 |@ann(f: @nowarn) def t10c = 0 // error (unused nowarn), should be silent
   |        ^^^^^^^
   |        @nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:60:0 ---------------------------------------------------------------
60 |@nowarn class I1a { // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg-custom-args/nowarn/nowarn.scala:65:0 ---------------------------------------------------------------
65 |@nowarn class I1b { // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
